# k8s-info

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.sh
k8s_info/: cli.py  reporting.py  utils.py
k8s_info/resources/: html_template.html
tests/: test_cli.py
